# connect4

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  visualize.py
connect4/: __init__.py  __main__.py  board.py  bot.py  game.py  player.py
tests/: test_board.py  test_bot.py  test_game.py  test_player.py
